src/clippy_output/clippy_ls_vdir.txt
error[E0433]: failed to resolve: use of undeclared crate or module `libc`
 --> src//ls_vdir.rs:3:25
  |
3 | pub static mut ls_mode: libc::c_int = 3 as libc::c_int;
  |                         ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
 --> src//ls_vdir.rs:3:44
  |
3 | pub static mut ls_mode: libc::c_int = 3 as libc::c_int;
  |                                            ^^^^ use of undeclared crate or module `libc`

error[E0601]: `main` function not found in crate `ls_vdir`
 --> src//ls_vdir.rs:3:56
  |
3 | pub static mut ls_mode: libc::c_int = 3 as libc::c_int;
  |                                                        ^ consider adding a `main` function to `src//ls_vdir.rs`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0433, E0601.
For more information about an error, try `rustc --explain E0433`.
